[fix] popup z-index 調整

--- a/src/css/page/page.scss
+++ b/src/css/page/page.scss
@@ -10,6 +10,10 @@
     cursor: pointer;
 }
 
+.swal2-container {
+    z-index: 3000;
+}
+
 .container {
     max-width: calc(100% - 50px)!important;
 }
